# snark

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: add-endpoint.md  add-provider.md  dev.md  health.md  lint.md  review.md  seed.md  test.md  try-endpoint.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  stale.yml  triage.yml
docs/: twitter-bot.md
docs/superpowers/plans/: 2026-06-20-snark-hardening.md
mcp-server/: README.md  pyproject.toml  server.json
mcp-server/src/snark_mcp/: client.py  config.py  server.py
mcp-server/tests/: conftest.py  test_client.py  test_config.py  test_safety.py  test_tools.py
snark/: cli.py  conftest.py  manage.py
snark/base/: admin.py  apps.py  logging.py  schema.py  settings.py  urls.py  wsgi.py
snark/base/tests/: test_logging.py
snark/templates/admin/: index.html
snark/wit/: admin.py  apps.py  constants.py  docs.py  github.py  maintenance.py  models.py  pricing.py  pricing_data.json  privacy.py  serializers.py  services.py  signals.py  stats.py  urls.py  views.py
snark/wit/management/commands/: ensure_admin.py  prune_logs.py  seed_personas.py  seed_providers.py  update_pricing.py
snark/wit/migrations/: 0001_initial.py  0002_delete_providerconfig.py  0003_remove_responselog_response_lo_ip_addr_1d923d_idx_and_more.py  0004_responselog_input_tokens_responselog_output_tokens.py  0005_generationevent.py  0006_generationevent_error_code_and_more.py
snark/wit/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  groq_provider.py  registry.py
snark/wit/tests/: test_admin_actions.py  test_admin_dashboard.py  test_admin_routing.py  test_batch_endpoint.py  test_cli.py  test_cors.py  test_ensure_admin.py  test_fallback.py  test_length_lang.py  test_meta_endpoints.py  test_models.py  test_moods_endpoint.py  test_openapi_schema.py  test_pricing.py  test_privacy.py  test_prompt_building.py  test_providers.py  test_prune_logs.py  test_random_endpoint.py  test_reliability.py  test_reply_endpoint.py  test_roast_github.py  test_safety_hardening.py  test_seed_command.py  test_services.py  test_signals.py  test_stream_capacity.py  test_streaming.py  test_throttle.py  test_token_split.py  test_views.py
