[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snark-mcp"
version = "0.1.0"
description = "MCP server for the Snark humor API — roasts, hot takes, honest commit messages and more, for Claude, Cursor, and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Pramod Kodag" }]
keywords = ["mcp", "model-context-protocol", "snark", "humor", "llm", "ai"]
dependencies = [
    "fastmcp>=3.4,<4",
    "httpx>=0.27",
]

[project.scripts]
snark-mcp = "snark_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/snark_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
